--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "jest": "^27.2.4",
     "lint-staged": "^11.2.0",
     "ts-jest": "^27.0.5",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "webpack": "^5.58.1",
+    "webpack-cli": "^4.9.0",
+    "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {
     "axios": "^0.22.0",
