--- a/package.json
+++ b/package.json
@@ -1,59 +1,56 @@
 {
-  "name": "reactjs-hooks-tdd-solid-patterns-clean-architecture",
+  "name": "clean-react",
   "version": "1.0.1",
-  "description": "",
-  "main": "index.js",
+  "description": "NodeJs Rest API using TDD, Clean Architecture and Typescript",
+  "author": "Rodrigo Manguinho",
+  "license": "GNU GPL3",
   "scripts": {
     "start": "webpack-dev-server --open",
-    "prepare": "husky install",
     "test": "jest --passWithNoTests --no-cache --runInBand",
     "test:watch": "npm test -- --watch",
     "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
-    "@testing-library/react": "^12.1.2",
+    "@testing-library/react": "^10.0.4",
     "@types/axios": "^0.14.0",
-    "@types/faker": "^5.5.8",
-    "@types/jest": "^27.0.2",
-    "@types/node": "^16.10.2",
-    "@types/react": "^17.0.27",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-router-dom": "^5.3.1",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "clean-webpack-plugin": "^4.0.0",
-    "css-loader": "^6.4.0",
-    "eslint": "^7.32.0",
-    "eslint-config-standard-with-typescript": "^21.0.1",
-    "eslint-plugin-import": "^2.24.2",
+    "@types/faker": "^4.1.11",
+    "@types/jest": "^25.2.1",
+    "@types/node": "^13.13.5",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
+    "@typescript-eslint/eslint-plugin": "^2.31.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.5.3",
+    "eslint": "^6.8.0",
+    "eslint-config-standard-with-typescript": "^11.0.1",
+    "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-standard": "^5.0.0",
-    "faker": "^5.5.3",
-    "git-commit-msg-linter": "^3.2.8",
-    "husky": "^7.0.2",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-standard": "^4.0.1",
+    "faker": "^4.1.0",
+    "git-commit-msg-linter": "^2.4.2",
+    "husky": "^4.2.5",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.2.4",
-    "jest-localstorage-mock": "^2.4.18",
-    "lint-staged": "^11.2.0",
-    "node-sass": "^6.0.1",
-    "sass-loader": "^12.2.0",
-    "style-loader": "^3.3.0",
-    "ts-jest": "^27.0.5",
-    "ts-loader": "^9.2.6",
-    "typescript": "^4.4.3",
-    "webpack": "^5.58.1",
-    "webpack-cli": "^4.9.0",
-    "webpack-dev-server": "^4.3.1"
+    "jest": "^25.5.4",
+    "jest-localstorage-mock": "^2.4.2",
+    "lint-staged": "^10.2.2",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.2.1",
+    "ts-jest": "^25.5.0",
+    "ts-loader": "^7.0.4",
+    "typescript": "^3.8.3",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "axios": "^0.22.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0"
+    "axios": "^0.19.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0"
   }
 }
