--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,24 @@
 {
   "compilerOptions": {
     "target": "es6",
-    "lib": ["dom", "dom.Iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "node",
     "jsx": "react",
-    "baseUrl": "src",
     "rootDir": "src",
+    "baseUrl": "src",
     "paths": {
       "@/*": ["*"]
     },
     "allowJs": true,
-    "strict": false,
     "resolveJsonModule": true
   },
-  "include": ["src"]
+  "include": [
+    "src"
+  ]
 }
